tests/purus/passing/invalid-parses/invalid-parses/NestedBinaryOps/NestedBinaryOps.purs
module NestedBinaryOps where

arrayLengthAtLeastTwo :: Array a -> Boolean
arrayLengthAtLeastTwo (_:_:_) = True
arrayLengthAtLeastTwo _ = False
